# physik

./: Cargo.toml  README.md  access.json
.github/workflows/: release.yml  rust.yml
src/: main.rs  style.css
